# chatServer

./: .gitignore  CMakeLists.txt  autobuild.sh
include/: public.h
include/server/: chatserver.h  chatservice.h
include/server/db/: connectionpool.h  db.h
include/server/modle/: friendmodle.h  group.h  groupmodle.h  offlinemsgmodle.h  user.h  usermodle.h
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: CMakeLists.txt  connectionpool.cpp  db.cpp  db_test.cpp  my.ini
src/server/modle/: friendmodle.cpp  groupmodle.cpp  offlinemsgmodle.cpp  usermodle.cpp
